# dj-techno-set-builder

./: .cursorignore  .dockerignore  .env.example  .gitignore  .mcp.json  .trufflehogignore  AGENT.md  AUDIT_REPORT_BPM-1.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  REQUIREMENTS.md  VERIFICATION_REPORT_TASK_2.md  alembic.ini  compose.dev.yaml  compose.override.yaml  compose.prod.yaml  compose.yaml  fastmcp.json  pyproject.toml  schema_v3.sql  schema_v4.sql  schema_v5.sql  schema_v6.sql  typing_extensions_patch.py
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-investigator.md  db-analyst.md  dj-workflow.md  emergency-protocols.md  pr-reviewer.md
.claude/commands/: delegate.md  expand.md  fill-playlist.md  setup-check.md
.claude/rules/: api.md  audio.md  database.md  db-schema.md  documentation.md  git.md  in-memoria.md  mcp.md  testing.md
.claude/skills/: audio-analysis.md  delegated-development.md  dj-set-workflow.md  mcp-tool-dev.md
.github/: BILLING_ISSUE_GUIDE.md  pull_request_template.md
.github/workflows/: ci-minimal.yml  ci-ultra-minimal.yml  ci.yml  codegen-orchestrator.yml  debug-test.yml  pr-title.yml  test-minimal.yml  test-postgres.yml  test-simple.yml
.in-memoria/: config.json
app/: __init__.py  _compat.py  config.py  database.py  dependencies.py  errors.py  main.py  mcp_server.py
app/audio/: __init__.py  beats.py  bpm.py  energy.py  greedy_chain.py  key_detect.py  loader.py  loudness.py  mfcc.py  pipeline.py  set_generator.py  set_templates.py  spectral.py  stems.py  structure.py  transition_score.py
app/cli/: __init__.py  _context.py  _formatting.py  analysis.py  delivery.py  main.py  playlists.py  setbuilder.py  sets.py  tracks.py
app/clients/: __init__.py  yandex_music.py
app/common/: dto.py  repository.py  router.py  service.py
app/core/: config.py  errors.py  handlers.py  logging.py  monitoring.py  text_sort.py
app/db/: base.py  session.py  uow.py
app/infrastructure/: database.py
app/mcp/: __init__.py  converters.py  dependencies.py  elicitation.py  entity_finder.py  gateway.py  library_stats.py  lifespan.py  observability.py  pagination.py  refs.py  resolve.py  response.py  schemas.py  session_state.py  types.py  types_curation.py  types_v2.py
app/middleware/: __init__.py  request_id.py
app/models/: __init__.py  assets.py  base.py  catalog.py  common.py  dj.py  embeddings.py  enums.py  features.py  harmony.py  ingestion.py  metadata_beatport.py  metadata_soundcloud.py  metadata_spotify.py  metadata_yandex.py  providers.py  runs.py  sections.py  sets.py  timeseries.py  transitions.py
app/repositories/: __init__.py  artists.py  audio_features.py  base.py  candidates.py  dj_beatgrid.py  dj_cue_points.py  dj_library_items.py  dj_saved_loops.py  genres.py  harmony.py  keys.py  labels.py  playlists.py  providers.py  releases.py  runs.py  sections.py  sets.py  tracks.py  transitions.py  yandex_metadata.py
app/routers/: __init__.py  health.py
app/schemas/: __init__.py  analysis.py  artists.py  base.py  candidates.py  catalog.py  common.py  dj.py  errors.py  features.py  genres.py  imports.py  keys.py  labels.py  playlists.py  providers.py  releases.py  runs.py  sections.py  set_curation.py  set_generation.py  sets.py  tracks.py  transitions.py  yandex_music.py
app/services/: _factories.py  analysis.py  artists.py  base.py  camelot_lookup.py  candidate_discovery.py  delivery.py  download.py  features.py  genres.py  import_yandex.py  keys.py  labels.py  library_stats.py  mix_points.py  playlists.py  releases.py  runs.py  scoring_helpers.py  sections.py  set_curation.py  set_export.py  set_generation.py  set_review.py  sets.py  techno_criteria.py  track_analysis.py  tracks.py  transition_persistence.py  transition_scoring.py  transition_scoring_unified.py  transition_type.py  transition_types.py  transitions.py  yandex_importer.py  yandex_music_client.py  yandex_music_enrichment.py
app/utils/: text_sort.py
docs/: api-design.md  ci-investigation-report.md  codegen-orchestration.md  data-inventory.md  database.md  linear.md  research-prompt-for-opus.md  techno-set-research-brief.md  transition-scoring.md
docs/plans/: 2026-02-12-full-schema-v6-models.md  2026-02-13-audio-analysis-integration.md  2026-02-13-audio-analysis-utils.md  2026-02-13-fix-db-data-gaps.md  2026-02-13-yandex-music-endpoints-v2.md  (+51 more)
migrations/: env.py
scripts/: .subgenre_playlists.json  README.md  __init__.py  _analyze_worker.py  analysis_stats.py  analyze_playlist_pair.py  analyze_subgenre_quality.py  analyze_techno_develop.py  analyze_techno_develop_recs.py  checkpoint.py  cleanup_rejected.py  complete_workflow.py  diagnose_hang.py  download_shizzz_batch.py  download_techno_develop.py  download_techno_develop_recs.py  dump_db_schema.py  enforce_mapped_column_style.py  export_shizzz_m3u.py  fill_and_verify.py  import_shizzz_playlist.py  import_shizzz_simple.py  patch_in_memoria.sh  populate_library_items.py  refresh_data.py  refresh_ym_metadata.py  rescore_sets.py  shizzz_playlist_data.json  techno_develop_recs_data.json  test_download_one.py  test_ym_client_live.py  update_set_playlist.py
tests/: conftest.py  test_analysis_api.py  test_batch_analysis_api.py  test_candidates.py  test_config.py  test_data_integrity.py  test_features_api.py  test_health.py  test_import_yandex_service.py  test_imports_api.py  test_mix_points.py  test_models_catalog.py  test_models_dj.py  test_models_embeddings.py  test_models_enums.py  test_models_features.py  test_models_harmony.py  test_models_ingestion.py  test_models_metadata_ext.py  test_models_pipeline.py  test_models_providers.py  test_models_sections.py  test_models_sets.py  test_models_spotify.py  test_models_transitions.py  test_models_yandex.py  test_providers_repo.py  test_repo_yandex_metadata.py  test_runs.py  test_schemas_imports.py  test_schemas_validation.py  test_schemas_ym.py  test_sections_api.py  test_sentry_init.py  test_set_generation.py  test_track_analysis.py  test_tracks.py  test_transition_scoring.py  test_transition_scoring_parity.py  test_transitions_compute.py  (+3 more)
(+362 files in other folders)
