[project]
name = "dj-techno-set-builder"
version = "0.1.0"
description = "DJ Techno Set Builder — audio analysis, transition matching & set construction"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "orjson>=3.10",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "alembic>=1.14",
    "fastmcp>=3.0.0b2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── uv ──────────────────────────────────────────────────────────
[tool.uv]
prerelease = "if-necessary-or-explicit"

# ── Ruff ────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "PLW", "RUF"]
ignore = ["A003"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["fastmcp.*", "alembic.*"]
ignore_missing_imports = true

# ── Pytest ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
