[project]
name = "dj-techno-set-builder"
version = "0.1.0"
description = "DJ Techno Set Builder — automated set construction from track analysis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "fastmcp>=3.0.0rc1",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.21",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "alembic>=1.14",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
audio = [
    "essentia>=2.1b6.dev1389",
    "soundfile>=0.13",
    "scipy>=1.12",
    "numpy>=1.26",
    "librosa>=0.10",
]
ml = [
    "demucs>=4.0",
    "torch>=2.0",
]
observability = [
    "sentry-sdk[fastapi]>=2.50",
    "opentelemetry-exporter-otlp>=1.29",
]
sampling = [
    "fastmcp[anthropic]",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest-cov>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"app/mcp/dependencies.py" = ["B008"]  # Depends() in defaults is the FastMCP DI pattern
"app/mcp/tools/*.py" = ["B008"]
"app/mcp/resources/status.py" = ["B008"]  # Depends() in defaults is the FastMCP DI pattern
"scripts/*.py" = ["E402"]  # sys.path.insert before app imports

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── MyPy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiosqlite.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["essentia.*", "soundfile.*", "scipy.*", "numpy", "numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["demucs.*", "torch.*", "torchaudio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastmcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentry_sdk.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["key_value.*"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning", "ignore::ResourceWarning"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
addopts = "-m 'not slow'"

# ── Bandit ────────────────────────────────────────────────────────────────────

[tool.bandit]
exclude_dirs = ["tests", "scripts", "migrations"]
